<resources>
    <string name="app_name">Online Book Store</string>
    <string name="login">Login</string>
    <string name="forgot">Forget</string>
    <string name="register_now">Register Now</string>
    <string name="register">Register</string>
    <string name="login_now">Login Now</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Forget">Get Password</string>
    <string name="menu_home">Online Book Store</string>
    <string name="dashboard">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Cart</string>
    <string name="openDrawer">Open Drawer </string>
    <string name="closeDrawer">Close Drawer </string>
    <string name="nameerror">Enter a valid name</string>
    <string name="home_second">Home Second</string>
    <string name="cityerror">Invalid city</string>
    <string name="subname">Invalid subject name</string>
    <string name="bkname">Invalid Book name</string>
    <string name="numbererror">Enter valid phone number</string>

</resources>
