<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gradient_background"
    tools:context=".ForgetPassword">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:scrollbarStyle="insideInset">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="180dp"
            android:gravity="center"
            android:theme="@style/AppTheme"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="10dp"
                android:textColor="#fff"
                android:textSize="45sp"
                android:id="@+id/appname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_marginBottom="20dp"
                android:layout_centerHorizontal="true"/>


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/background_light"
                android:hint="Enter Email"
                android:inputType="textEmailAddress"
                android:textColor="#ECF0F6"
                android:textColorHint="#FFFFFF" />

            <LinearLayout
                android:id="@+id/linear_layout_foget_password"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/reset_pass_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.451"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forget_email"
                app:layout_constraintVertical_bias="0.233">

                <ImageView
                    android:id="@+id/forget_email_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/red_mail"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/forget_pass_icon_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="Recovery Email sent successfully! check your Inbox."
                    android:textColor="@color/colorwhite"
                    android:visibility="gone" />


            </LinearLayout>

            <ProgressBar
                android:id="@+id/forget_pass_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/reset_pass_btn"
                app:layout_constraintEnd_toEndOf="@+id/linear_layout_foget_password"
                app:layout_constraintStart_toStartOf="@+id/linear_layout_foget_password"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout_foget_password" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">



                <Button
                    android:id="@+id/reset"
                    style="@style/AppTheme.RoundedCornerMaterialButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_shape"
                    android:text="@string/Forget"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#F7FFFFFF" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/login_now"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_now"
                    style="@style/fonts"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="|"
                    style="@style/fonts"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:id="@+id/register_now"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/fonts"
                    android:text="@string/register_now"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>